Added some more styling so current player is more obvious

--- a/index.html
+++ b/index.html
@@ -51,21 +51,21 @@
         <article class="grid">
           <div class="border container rock">
             <ul>
-              <li><img src="images/Cat-Rock.png" alt="A cat paw that looks like a rock"></li>
+              <li><img src="images/Cat-Rock-2.png" alt="A cat paw that looks like a rock"></li>
               <li>Rock</li>
             </ul>
           </div>
            
           <div class="border container paper">
             <ul>
-              <li><img src="images/Cat-Paper.png" alt="A cat paw stretched out like paper"></li>
+              <li><img src="images/Cat-Paper-2.png" alt="A cat paw stretched out like paper"></li>
               <li>Paper</li>
             </ul>
           </div>
       
           <div class="border container scissors">
             <ul>
-              <li><img src="images/Cat-Scissors.png" alt="A cat paw stretched out with claws out"></li>
+              <li><img src="images/Cat-Scissors-2.png" alt="A cat paw stretched out with claws out"></li>
               <li>Scissors</li>
             </ul>
           </div> 
